--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keyring==25.6.0
-kiwisolver==1.4.8
+kiwisolver
 lib==4.0.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
