--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,9 @@ kiwisolver
 lib==4.0.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplot==0.1.9
+matplot
+matplotlib
+matplotlib-inline
 mdurl==0.1.2
 more-itertools==10.6.0
 narwhals==1.28.0
