--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 comm==0.2.2
-contourpy
+contourpy==1.1.0
 cycler==0.12.1
 debugpy==1.8.12
 decorator==5.2.1
@@ -21,7 +21,7 @@ GitPython==3.1.44
 id==1.5.0
 idna==3.10
 ipykernel==6.29.5
-ipython
+ipython==8.12.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
@@ -32,19 +32,16 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keyring==25.6.0
-kiwisolver
+kiwisolver==1.4.4
 lib==4.0.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplot
-matplotlib
-matplotlib-inline
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 more-itertools==10.6.0
-narwhals==1.28.0
 nest-asyncio==1.6.0
-nh3==0.2.21
-numpy==2.2.3
+numpy==1.24.4
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
